RESOLVED FIXED82023
AX: Support solution to handle invalid ax text marker
https://bugs.webkit.org/show_bug.cgi?id=82023
Summary AX: Support solution to handle invalid ax text marker
chris fleizach
Reported 2012-03-22 23:28:14 PDT
Due to the fact that web TextMarkers can dynamically go away when document nodes changes, VoiceOver is unable to cache those AXTextMarkers for various comparison purposes. We should add the ability to: Ability to convert a given TextMarker to a NSInteger index and vice versa, from a NSInteger index back to a AXTextMarkerRef Ability to determine if a given TextMarker is valid
Attachments
patch for footer role (21.36 KB, patch)
2012-03-23 00:30 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2012-03-23 00:30:57 PDT
Created attachment 133439 [details] patch for footer role
Oliver Hunt
Comment 2 2012-03-24 11:58:11 PDT
Comment on attachment 133439 [details] patch for footer role Yay so much test-fu!
WebKit Review Bot
Comment 3 2012-03-24 21:03:21 PDT
Comment on attachment 133439 [details] patch for footer role Clearing flags on attachment: 133439 Committed r112021: <http://trac.webkit.org/changeset/112021>
WebKit Review Bot
Comment 4 2012-03-24 21:03:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.