Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h
@@ -220,6 +220,9 @@ public:
     JSRetainPtr<JSStringRef> stringForTextMarkerRange(AccessibilityTextMarkerRange*);
     int textMarkerRangeLength(AccessibilityTextMarkerRange*);
     bool attributedStringForTextMarkerRangeContainsAttribute(JSStringRef, AccessibilityTextMarkerRange*);
+    int indexForTextMarker(AccessibilityTextMarker*);
+    bool isTextMarkerValid(AccessibilityTextMarker*);
+    PassRefPtr<AccessibilityTextMarker> textMarkerForIndex(int);
 
     // Notifications
     // Function callback should take one argument, the name of the notification.
